-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 24
-
Component/s: hotspot
-
b09
-
riscv
-
generic
[buildjdk] Creating buildjdk/support/modules_libs/java.base/jexec from 1 file(s)
[buildjdk] Creating buildjdk/support/modules_libs/java.base/jspawnhelper from 1 file(s)
[buildjdk] Compiling up to 144 files for jdk.jdeps
[buildjdk] Compiling up to 91 files for jdk.jlink
[buildjdk] Creating interim java.logging.jmod
[buildjdk] Creating interim java.base.jmod
[buildjdk] Creating interim jimage
ERROR: Build failed for target 'default (exploded-image)' in configuration 'linux-riscv64-client-fastdebug' (exit code 2)
Stopping javac server
=== Output from failing command(s) repeated here ===
* For target hotspot_variant-client_libjvm_objs_vm_version_riscv.o:
/home/zifeihan/jdk/src/hotspot/cpu/riscv/vm_version_riscv.cpp: In static member function 'static void VM_Version::initialize()':
/home/zifeihan/jdk/src/hotspot/cpu/riscv/vm_version_riscv.cpp:255:17: error: 'MaxVectorSize' was not declared in this scope; did you mean 'MaxNewSize'?
255 | if (UseRVV && MaxVectorSize >= 32) {
| ^~~~~~~~~~~~~
| MaxNewSize
* All command lines available in /home/zifeihan/jdk/build/linux-riscv64-client-fastdebug/make-support/failure-logs.
=== End of repeated output ===
No indication of failed target found.
HELP: Try searching the build log for '] Error'.
HELP: Run 'make doctor' to diagnose build problems.
make[1]: *** [/home/zifeihan/jdk/make/Init.gmk:323: main] Error 2
make: *** [/home/zifeihan/jdk/make/Init.gmk:189: default] Error 2
[buildjdk] Creating buildjdk/support/modules_libs/java.base/jspawnhelper from 1 file(s)
[buildjdk] Compiling up to 144 files for jdk.jdeps
[buildjdk] Compiling up to 91 files for jdk.jlink
[buildjdk] Creating interim java.logging.jmod
[buildjdk] Creating interim java.base.jmod
[buildjdk] Creating interim jimage
ERROR: Build failed for target 'default (exploded-image)' in configuration 'linux-riscv64-client-fastdebug' (exit code 2)
Stopping javac server
=== Output from failing command(s) repeated here ===
* For target hotspot_variant-client_libjvm_objs_vm_version_riscv.o:
/home/zifeihan/jdk/src/hotspot/cpu/riscv/vm_version_riscv.cpp: In static member function 'static void VM_Version::initialize()':
/home/zifeihan/jdk/src/hotspot/cpu/riscv/vm_version_riscv.cpp:255:17: error: 'MaxVectorSize' was not declared in this scope; did you mean 'MaxNewSize'?
255 | if (UseRVV && MaxVectorSize >= 32) {
| ^~~~~~~~~~~~~
| MaxNewSize
* All command lines available in /home/zifeihan/jdk/build/linux-riscv64-client-fastdebug/make-support/failure-logs.
=== End of repeated output ===
No indication of failed target found.
HELP: Try searching the build log for '] Error'.
HELP: Run 'make doctor' to diagnose build problems.
make[1]: *** [/home/zifeihan/jdk/make/Init.gmk:323: main] Error 2
make: *** [/home/zifeihan/jdk/make/Init.gmk:189: default] Error 2
- relates to
-
JDK-8335191 RISC-V: verify perf of chacha20
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk/7121d71b
-
Review(master)
openjdk/jdk/20386