8337421: RISC-V: client VM build failure after JDK-8335191